assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 82 conflicts: 1 shift/reduce
State 123 conflicts: 9 shift/reduce
State 137 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | error ';'

   13 formal_list: %empty
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expression_semicolon_list: %empty
   18                          | expression
   19                          | expression_semicolon_list ';' expression

   20 expression_comma_list: %empty
   21                      | expression
   22                      | expression_comma_list ';' expression

   23 expression: '(' expression ')'
   24           | STR_CONST
   25           | BOOL_CONST
   26           | INT_CONST
   27           | OBJECTID
   28           | OBJECTID ASSIGN expression
   29           | expression '.' OBJECTID '(' expression_comma_list ')'
   30           | OBJECTID '(' expression_comma_list ')'
   31           | expression '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   32           | IF expression THEN expression ELSE expression FI
   33           | WHILE expression LOOP expression POOL
   34           | '{' expression_semicolon_list '}'
   35           | LET inner_let
   36           | CASE expression OF case_list ESAC
   37           | NEW TYPEID
   38           | ISVOID expression
   39           | expression '+' expression
   40           | expression '-' expression
   41           | expression '*' expression
   42           | expression '/' expression
   43           | expression '<' expression
   44           | expression '=' expression
   45           | expression LE expression
   46           | '~' expression
   47           | NOT expression
   48           | error

   49 inner_let: OBJECTID ':' TYPEID IN expression
   50          | OBJECTID ':' TYPEID ASSIGN expression IN expression
   51          | OBJECTID ':' TYPEID ',' inner_let
   52          | OBJECTID ':' TYPEID ASSIGN expression ',' inner_let

   53 case_list: %empty
   54          | OBJECTID ':' TYPEID DARROW expression ';'
   55          | case_list OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 23 29 30 31
    ')' (41) 11 23 29 30 31
    '*' (42) 41
    '+' (43) 39
    ',' (44) 15 51 52
    '-' (45) 40
    '.' (46) 29 31
    '/' (47) 42
    ':' (58) 9 10 11 16 49 50 51 52 54 55
    ';' (59) 4 5 6 9 10 11 12 19 22 54 55
    '<' (60) 43
    '=' (61) 44
    '@' (64) 31
    '{' (123) 4 5 11 34
    '}' (125) 4 5 11 34
    '~' (126) 46
    error (256) 6 12 48
    CLASS (258) 4 5
    ELSE (259) 32
    FI (260) 32
    IF (261) 32
    IN (262) 49 50
    INHERITS (263) 5
    LET (264) 35
    LOOP (265) 33
    POOL (266) 33
    THEN (267) 32
    WHILE (268) 33
    CASE (269) 36
    ESAC (270) 36
    OF (271) 36
    DARROW (272) 54 55
    NEW (273) 37
    ISVOID (274) 38
    STR_CONST <symbol> (275) 24
    INT_CONST <symbol> (276) 26
    BOOL_CONST <boolean> (277) 25
    TYPEID <symbol> (278) 4 5 9 10 11 16 31 37 49 50 51 52 54 55
    OBJECTID <symbol> (279) 9 10 11 16 27 28 29 30 31 49 50 51 52 54 55
    ASSIGN (280) 10 28 50 52
    NOT (281) 47
    LE (282) 45
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10 11 12
        on right: 8
    formal_list <formals> (51)
        on left: 13 14 15
        on right: 11 15
    formal <formal> (52)
        on left: 16
        on right: 14 15
    expression_semicolon_list <expressions> (53)
        on left: 17 18 19
        on right: 19 34
    expression_comma_list <expressions> (54)
        on left: 20 21 22
        on right: 22 29 30 31
    expression <expression> (55)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 10 11 18 19 21 22 23 28 29 31 32 33 36 38 39 40 41 42 43 44 45 46 47 49 50 52 54 55
    inner_let <expression> (56)
        on left: 49 50 51 52
        on right: 35 51 52
    case_list <cases> (57)
        on left: 53 54 55
        on right: 36 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   12 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 21
    '('  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   12 feature: error ';' .

    $default  reduce using rule 12 (feature)


State 21

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 25


State 22

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 25

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 30
    ';'     shift, and go to state 31


State 26

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 30

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 50


State 31

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


State 32

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 51


State 33

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 52


State 34

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 53


State 35

   48 expression: error .

    $default  reduce using rule 48 (expression)


State 36

   32 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 54


State 37

   35 expression: LET . inner_let

    OBJECTID  shift, and go to state 55

    inner_let  go to state 56


State 38

   33 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 57


State 39

   36 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 58


State 40

   37 expression: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 41

   38 expression: ISVOID . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 60


State 42

   24 expression: STR_CONST .

    $default  reduce using rule 24 (expression)


State 43

   26 expression: INT_CONST .

    $default  reduce using rule 26 (expression)


State 44

   25 expression: BOOL_CONST .

    $default  reduce using rule 25 (expression)


State 45

   27 expression: OBJECTID .
   28           | OBJECTID . ASSIGN expression
   30           | OBJECTID . '(' expression_comma_list ')'

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 27 (expression)


State 46

   47 expression: NOT . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 63


State 47

   46 expression: '~' . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 64


State 48

   34 expression: '{' . expression_semicolon_list '}'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    '}'  reduce using rule 17 (expression_semicolon_list)
    ';'  reduce using rule 17 (expression_semicolon_list)

    expression_semicolon_list  go to state 65
    expression                 go to state 66


State 49

   23 expression: '(' . expression ')'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 67


State 50

   10 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76
    ';'  shift, and go to state 77


State 51

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 52

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 78


State 53

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


State 54

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   32           | IF expression . THEN expression ELSE expression FI
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression

    THEN  shift, and go to state 79
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 55

   49 inner_let: OBJECTID . ':' TYPEID IN expression
   50          | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   51          | OBJECTID . ':' TYPEID ',' inner_let
   52          | OBJECTID . ':' TYPEID ASSIGN expression ',' inner_let

    ':'  shift, and go to state 80


State 56

   35 expression: LET inner_let .

    $default  reduce using rule 35 (expression)


State 57

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   33           | WHILE expression . LOOP expression POOL
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression

    LOOP  shift, and go to state 81
    LE    shift, and go to state 68
    '<'   shift, and go to state 69
    '='   shift, and go to state 70
    '+'   shift, and go to state 71
    '-'   shift, and go to state 72
    '*'   shift, and go to state 73
    '/'   shift, and go to state 74
    '@'   shift, and go to state 75
    '.'   shift, and go to state 76


State 58

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   36           | CASE expression . OF case_list ESAC
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression

    OF   shift, and go to state 82
    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76


State 59

   37 expression: NEW TYPEID .

    $default  reduce using rule 37 (expression)


State 60

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   38           | ISVOID expression .
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression

    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 38 (expression)


State 61

   28 expression: OBJECTID ASSIGN . expression

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 83


State 62

   30 expression: OBJECTID '(' . expression_comma_list ')'

    error       shift, and go to state 35
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    ';'  reduce using rule 20 (expression_comma_list)
    ')'  reduce using rule 20 (expression_comma_list)

    expression_comma_list  go to state 84
    expression             go to state 85


State 63

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression
   47           | NOT expression .

    LE   shift, and go to state 68
    '<'  shift, and go to state 69
    '='  shift, and go to state 70
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 47 (expression)


State 64

   29 expression: expression . '.' OBJECTID '(' expression_comma_list ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression_comma_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . '=' expression
   45           | expression . LE expression
   46           | '~' expression .

    '@'  shift, and go to state 75
    '.'  shift, and go to state 76

    $default  reduce using rule 46 (expression)


State 65

   19 expression_semicolon_list: expression_semicolon_list . ';' expression
   34 expression: '{' expression_semicolon_list . '}'

    '}'  shift, and go to state 86
    ';'  shift, and go to state 87


State 66
